@startuml

class Election {
    - voter: Voter
    - candidate: Candidate
}

enum ElectionType{
    - Points
    - Crosses
}

class Voter {
    - schoolIdentity: String
    - schoolPassword: String
    - alreadyVoted: Boolean
}

class Candidate {
   - firstname: String
   - lastname: String
   - class: String
}

Election   "1"--"*" Candidate  : > hat
Election   "1"--"*" Voter  : < nimmt Teil


@enduml